# RetroSim

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.txt  compile_sdlgpu.sh  retrosim.config  xmake.lua
PicoC/: Xmake.lua  picoc.c
PicoC/cstdlib/: stdio.c  unistd.c
PicoC/platform/: library_retrosim.c  platform_retrosim.c
RetroSim.xcodeproj/: project.pbxproj
data/: font8x16.tiledata  font8x8.tiledata  freedom.png.bitmap  freedom.png.pal  palette.h  startup.rsb  startup.s  unscii-16.cpp  unscii-16.h  unscii-16.tiledata  unscii-8.cpp  unscii-8.h  unscii-8.tiledata
data/gfx/: Explorers.png.bitmap  Explorers.png.pal  Fairlight.png.bitmap  Fairlight.png.pal  Metaverse.png.bitmap  Metaverse.png.pal  Nahkolor.png.bitmap  Nahkolor.png.pal  Phenomenon.png.bitmap  Phenomenon.png.pal  Rebels.png.bitmap  Rebels.png.pal  WinterPatrol.png.bitmap  (+1 more)
docs/: A65000-Assembler.md  A65000-Instruction-Encoding.md  A65000-Instruction-Set.md  A65000.md  ABI.md  Architecture.md  Graphics.md  LibRetro.md  RetroSim.md  Retrosim-Executable-Format.md
scripts/: draw.gravity  startup.gravity  test.gravity  test2.gravity  texteffect.gravity
src/: API.cpp  Application.cpp  Application.h  Audio.cpp  Audio.h  CPUShader.cpp  CPUShader.h  Config.cpp  Config.h  Core.cpp  Core.h  CoreConfig.cpp  CoreConfig.h  FileUtils.cpp  FileUtils.h  GPU.cpp  GPU.h  GravityAPI.cpp  GravityAPI.h  GravityScripting.cpp  GravityScripting.h  LibRetroAPI.cpp  LibRetroCore.cpp  LibRetroCore.h  Libretro.cpp  Logger.cpp  Logger.h  MMU.cpp  MMU.h  ScriptManager.cpp  ScriptManager.h  main.cpp
(+103 files in other folders)
